Added a test gate to test-liquids.cfg.

--- a/data/level/Unused/Test/test-liquids.cfg
+++ b/data/level/Unused/Test/test-liquids.cfg
@@ -108,7 +108,11 @@
 				"objects": []
 			},
 			"property_data": {
-				"original_level_we_spawned_on": "test-liquids.cfg"
+				"original_level_we_spawned_on": "test-liquids.cfg",
+				"stored_events": {
+					"": 0,
+					"started_game": 1
+				}
 			},
 			"type": "frogatto_playable",
 			"x": 992,
@@ -129,6 +133,46 @@
 			"type": "whitewater_controller",
 			"x": -1676,
 			"y": 276
+		},
+		{
+			"_uuid": "ce221025a170481d813ddbbbbf7758d7",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_65c133e0",
+			"property_data": {
+				"event": "test_gate"
+			},
+			"type": "gate",
+			"x": 1354,
+			"y": 69
+		},
+		{
+			"_uuid": "4adc042fea114030bb78efb6c336569c",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_510735c1",
+			"property_data": {
+				"default_event_state": 1,
+				"event": "test_gate",
+				"original_level_we_spawned_on": "test-liquids.cfg"
+			},
+			"type": "lever",
+			"x": 1072,
+			"y": 111
+		},
+		{
+			"_uuid": "77b9edc74cc14f938a802bb648a8f989",
+			"created": true,
+			"current_frame": "on",
+			"custom": true,
+			"label": "_5bae6e39",
+			"property_data": {
+				"event": "",
+				"light_circular": "@eval deserialize('a95bbc67521d4e7680f9c32b905c324a')"
+			},
+			"type": "indicator_light_metal",
+			"x": 1088,
+			"y": 72
 		}
 	],
 	"dimensions": [-1856,-800,3135,1055],
@@ -138,7 +182,29 @@
 	"segment_height": 0,
 	"segment_width": 0,
 	"serialized_objects": {
-		"character": []
+		"character": [
+			{
+				"_uuid": "a95bbc67521d4e7680f9c32b905c324a",
+				"current_frame": "normal",
+				"custom": true,
+				"draw_scale": 500000,
+				"label": "_3085be7e",
+				"parent": "deserialize('77b9edc74cc14f938a802bb648a8f989')",
+				"property_data": {
+					"_sprite_type": "@eval enum eased_halo",
+					"custom_relative_pos_default": {
+						"mid_x": 0,
+						"mid_y": 0
+					},
+					"time_to_die": 0
+				},
+				"relative_x": 0,
+				"relative_y": 0,
+				"type": "light_source_attache",
+				"x": 1104,
+				"y": 104
+			}
+		]
 	},
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
