Hooked up all the light source attaches to variable_name settings, and made most of them use the proper constructors.

--- a/data/objects/effects/puffs/explosion_big_harmful.cfg
+++ b/data/objects/effects/puffs/explosion_big_harmful.cfg
@@ -23,14 +23,19 @@ properties: {
 			parent: me,
 			custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 			scale: 0.25,
+			variable_name: 'light_circular',
 		})",
 	},
+#-------------------------- constructor/destructor --------------------------#
+	transient_obj_constructor: "[
+		facing(if(1d2=2,1,-1)),
+		add_object(light_circular),
+		map(range(50), schedule(value, set(light_circular.scale,  2*(1.0 - 0.02*value)) )),
+	]",
+
+
 },
-on_create: "[
-				facing(if(1d2=2,1,-1)),
-				add_object(light_circular),
-				map(range(50), schedule(value, set(light_circular.scale,  2*(1.0 - 0.02*value)) )),
-			]",
+
 on_end_anim: "if(animation = 'normal', animation('normal2'),die())",
 animation: [
 	{
