--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3332,7 +3332,8 @@ object_type: [
 					parent: me,
 					custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 					scale: 0.75,
-				})",
+					variable_name: 'light_circular',
+			})",
 			},
 		},
 		
@@ -3785,6 +3786,7 @@ object_type: [
 					parent: me,
 					custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 					scale: 0.75,
+					variable_name: 'light_circular',
 				})",
 			},
 		},
@@ -3828,6 +3830,7 @@ object_type: [
 					parent: me,
 					custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 					scale: 0.75,
+					variable_name: 'light_circular',
 				})",
 			},
 
@@ -3928,6 +3931,7 @@ object_type: [
 					parent: me,
 					custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 					scale: 0.75,
+					variable_name: 'light_circular',
 				})",
 			},
 		},
@@ -4107,6 +4111,7 @@ object_type: [
 					parent: me,
 					custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 					scale: 1.0,
+					variable_name: 'light_circular',
 				})",
 			},
 		},
@@ -4209,6 +4214,7 @@ object_type: [
 					parent: me,
 					custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 					scale: 1.0,
+					variable_name: 'light_circular',
 				})",
 			},
 		},
@@ -4337,6 +4343,7 @@ object_type: [
 					parent: me,
 					custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 					scale: 1.0,
+					variable_name: 'light_circular',
 				})",
 			},
 		},
@@ -4695,6 +4702,7 @@ object_type: [
 					parent: me,
 					custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 					scale: 1.0,
+					variable_name: 'light_circular',
 				})",
 			},
 		},
