--- a/data/objects/props-interactive/misc/soda_machine.cfg
+++ b/data/objects/props-interactive/misc/soda_machine.cfg
@@ -45,11 +45,17 @@ object_type: {
 				parent: me,
 				custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 				scale: 0.5,
+				variable_name: 'light_circular',
 			})",
-		}
-	},
+		},
+#-------------------------- constructor/destructor --------------------------#
+		transient_obj_constructor: "[
+			set(alpha,0),
+			add_object(light_circular),
+		]",
 
-	on_create: "[set(alpha,0),add_object(light_circular)]",
+
+	},
 
 	on_timer: "if(1d3=3, [
 							set(light_circular.scale, (0.5 + (foo / 100.0))),
