--- a/data/objects/props/cave/lantern.cfg
+++ b/data/objects/props/cave/lantern.cfg
@@ -3,12 +3,25 @@ id: "lantern",
 ignore_collide: true,
 zorder: "@include data/zorder.cfg:interior_decor",
 timer_frequency: 3,
+prototype: ['transient_object'],
+
 properties: {
-	spawn_sfx: "spawn('sound_source_individual',mid_x,mid_y,{sound_file:'ambient/torch.ogg'})",
+	_sfx: { type: "obj sound_source_individual_attache", init: "object('sound_source_individual_attache', mid_x, mid_y, {
+			parent: me,
+			sound_file:'ambient/torch.ogg',
+			starts_with_sound_on: true
+		})"
+	_torch_glow: { type: "obj torch_glow", init: "object('torch_glow', mid_x, mid_y - 20, facing)", },
+
+#-------------------------- constructor/destructor --------------------------#
+	transient_obj_constructor: "[
+		add_object(_torch_glow),
+		add_object(_sfx),
+	]",
+
 },
 
 
-on_create: "[spawn('torch_glow',midpoint_x,midpoint_y,facing),spawn_sfx]",
 on_end_anim: "animation('normal')",
 activation_border: 500,
 editor_info: {
