--- a/data/objects/props/utilities/torch.cfg
+++ b/data/objects/props/utilities/torch.cfg
@@ -6,7 +6,12 @@ timer_frequency: 3,
 prototype: ['transient_object'],
 properties: {
 	
-	_sfx: { type: "obj sound_source_individual_attache", init: "object('sound_source_individual_attache', mid_x, mid_y, {parent: me, sound_file:'ambient/torch.ogg', starts_with_sound_on: true})" },
+	_sfx: { type: "obj sound_source_individual_attache", init: "object('sound_source_individual_attache', mid_x, mid_y, {
+			parent: me,
+			sound_file:'ambient/torch.ogg',
+			starts_with_sound_on: true
+		})"
+	},
 	
 	_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {
 			_particle_type: 'torch_flames',
@@ -22,14 +27,22 @@ properties: {
 		})",
 	},
 	
+	_torch_glow: { type: "obj torch_glow", init: "object('torch_glow', mid_x, mid_y - 20, {
+			parent: me,
+			time_to_die: 200,
+		})",
+	},
+#-------------------------- constructor/destructor --------------------------#
+	transient_obj_constructor: "[
+		add_object(_torch_glow),
+		add_object(_particles),
+		add_object(_sfx),
+	]",
+	
 },
 
 
-on_load: "[
-				spawn('torch_glow',midpoint_x,midpoint_y-20,facing),
-				add_object(_particles),
-				add_object(_sfx),
-			]",
+
 
 on_end_anim: "animation('normal')",
 activation_border: 500,
