--- a/data/object_prototypes/general/effects_attache_glow.cfg
+++ b/data/object_prototypes/general/effects_attache_glow.cfg
@@ -76,6 +76,7 @@ properties: {
 			parent: me,
 			custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 			scale: 1.0,
+			variable_name: 'light_circular',
 		})",
 	},
 
