--- a/data/objects/effects/light-blooms/torch_glow.cfg
+++ b/data/objects/effects/light-blooms/torch_glow.cfg
@@ -1,8 +1,9 @@
 {
 ignore_collide: true,
 id: "torch_glow",
-prototype: ["transient_object"],
+prototype: ["effects_attache"],
 is_strict: true,
+serializable: false,
 zorder: "@include data/zorder.cfg:near_player_foreground_effects",
 timer_frequency: 5,
 activation_border: 500,
@@ -32,6 +33,7 @@ properties: {
 			parent: me,
 			custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 			scale: 1.0,
+			variable_name: 'light_circular',
 		})",
 	},
 
@@ -55,14 +57,16 @@ properties: {
 		) * 0.01
 	
 	",
-},
-
-on_create: "[
+#-------------------------- constructor/destructor --------------------------#
+	do_setup: "[
 		set(alpha,_base_alpha), /*set(green,69), set(blue,31), */
 		set(_norm_x, mid_x),
 		set(_norm_y, mid_y),
 		add_object(light_circular),
 	]",
+},
+
+
 
 on_process: "set_flicker",
 on_end_anim: "animation('normal')",
