--- a/data/objects/effects/misc/light_controller.cfg
+++ b/data/objects/effects/misc/light_controller.cfg
@@ -7,7 +7,7 @@ hidden_in_game: true,
 always_active: true,
 
 properties: {
-	constructor: "add_object(light_circular)",
+	transient_obj_constructor: "add_object(light_circular)",
 	
 	
 	pixel_size: "decimal :: lib.math.round(lib.math.length(x,y,_x_bound,_y_bound))",
@@ -21,6 +21,7 @@ properties: {
 			parent: me,
 			custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 			scale: scale_factor,
+			variable_name: 'light_circular',
 		})",
 	},
 
@@ -29,8 +30,7 @@ properties: {
 	_y_bound: { type: "int", editor_info: { type: "y", value: "y-100" }, init: "y-100" },
 },
 
-on_create: "constructor",
-on_editor_added: "constructor",
+on_editor_added: "transient_obj_constructor",
 
 on_editor_changed_variable: "[
 	set(light_circular.scale, scale_factor),
