--- a/data/objects/effects/puffs/explosion_huge_harmful.cfg
+++ b/data/objects/effects/puffs/explosion_huge_harmful.cfg
@@ -24,15 +24,18 @@ properties: {
 			parent: me,
 			custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 			scale: 0.25,
+			variable_name: 'light_circular',
 		})",
 	},
+#-------------------------- constructor/destructor --------------------------#
+	transient_obj_constructor: "[
+		facing(if(1d2=2,1,-1)),
+		add_object(light_circular),
+		map(range(50), schedule(value, set(light_circular.scale,  3.5*(1.0 - 0.02*value)) )),
+		set(scale,2.5),
+	]",
+
 },
-on_create: "[
-				facing(if(1d2=2,1,-1)),
-				add_object(light_circular),
-				map(range(50), schedule(value, set(light_circular.scale,  3.5*(1.0 - 0.02*value)) )),
-				set(scale,2.5),
-			]",
 
 
 on_end_anim: "if(animation = 'normal', [animation('normal2'),set(scale,1.5)],die())",
