--- a/data/objects/enemies/bugs/ant_flying_glow.cfg
+++ b/data/objects/enemies/bugs/ant_flying_glow.cfg
@@ -18,6 +18,7 @@ properties: {
 			parent: me,
 			custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 			scale: 1.0,
+			variable_name: 'light_circular',
 		})",
 	},
 
