--- a/data/objects/enemies/bugs/hopper_armored.cfg
+++ b/data/objects/enemies/bugs/hopper_armored.cfg
@@ -241,6 +241,7 @@ object_type: [
 					parent: me,
 					custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 					scale: 0.25,
+					variable_name: 'light_circular',
 				})",
 			},
 		},
