--- a/data/objects/props-interactive/misc/indicator_light_metal.cfg
+++ b/data/objects/props-interactive/misc/indicator_light_metal.cfg
@@ -21,6 +21,7 @@ properties: {
 			parent: me,
 			custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 			scale: 0.5,
+			variable_name: 'light_circular',
 		})",
 	}
 },
