--- a/data/objects/props/decor/candle_glow.cfg
+++ b/data/objects/props/decor/candle_glow.cfg
@@ -28,19 +28,23 @@ properties: {
 			parent: me,
 			custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 			scale: 0.55,
+			variable_name: 'light_circular',
 		})",
 	},
 	
+	
+#-------------------------- constructor/destructor --------------------------#
+	transient_obj_constructor: "[
+		set(alpha,base_alpha),
+		set(green,69),
+		set(blue,31),
+		add_particles('flamey'),
+		fire_event(self,'set_flicker'),
+		add_object(light_circular),
+	]",
+	
 },
 
-on_create: "[
-	set(alpha,base_alpha),
-	set(green,69),
-	set(blue,31),
-	add_particles('flamey'),
-	fire_event(self,'set_flicker'),
-	add_object(light_circular),
-]",
 
 on_process: "if(HIGH_END_SYSTEM, fire_event(self,'set_flicker'))",
 on_set_flicker: "[
