--- a/data/objects/props/utilities/ceiling_lamp.cfg
+++ b/data/objects/props/utilities/ceiling_lamp.cfg
@@ -19,6 +19,7 @@ properties: {
 			time_to_die: 0,
 			parent: me,
 			custom_relative_pos_default: {mid_x: 0,	mid_y: 65},
+			variable_name: 'light_cone',
 		})",
 	},
 	light_circular: {
@@ -30,6 +31,7 @@ properties: {
 			parent: me,
 			custom_relative_pos_default: {mid_x: 0,	mid_y: 25},
 			scale: 0.5,
+			variable_name: 'light_circular',
 		})",
 	},
 	
@@ -41,6 +43,7 @@ properties: {
 			parent: me,
 			custom_relative_pos_default: {mid_x: 0,	mid_y: 25},
 			time_to_die: 0,
+			variable_name: 'lamp_spark_particles',
 		})"
 	},
 	
