--- a/data/objects/props/utilities/ceiling_lamp_silver.cfg
+++ b/data/objects/props/utilities/ceiling_lamp_silver.cfg
@@ -15,6 +15,7 @@ properties: {
 			time_to_die: 0,
 			parent: me,
 			custom_relative_pos_default: {mid_x: 0,	mid_y: 65},
+			variable_name: 'light_cone',
 		})",
 	},
 	light_circular: {
@@ -26,6 +27,7 @@ properties: {
 			parent: me,
 			custom_relative_pos_default: {mid_x: 0,	mid_y: 25},
 			scale: 0.5,
+			variable_name: 'light_circular',
 		})",
 	},
 
@@ -37,6 +39,7 @@ properties: {
 			parent: me,
 			custom_relative_pos_default: {mid_x: 0,	mid_y: 25},
 			time_to_die: 0,
+			variable_name: 'lamp_spark_particles',
 		})",
 	},
 	
