Finally figured out that a source of several 'loading from save' issues is that variables don't auto-detect the serializability of the values stored in them.

--- a/data/objects/props/cave/lantern.cfg
+++ b/data/objects/props/cave/lantern.cfg
@@ -10,8 +10,16 @@ properties: {
 			parent: me,
 			sound_file:'ambient/torch.ogg',
 			starts_with_sound_on: true
-		})"
-	_torch_glow: { type: "obj torch_glow", init: "object('torch_glow', mid_x, mid_y - 20, facing)", },
+		})",
+		persistent: false,
+	},
+	
+	_torch_glow: { type: "obj torch_glow", init: "object('torch_glow', mid_x, mid_y - 20, {
+			parent: me,
+			time_to_die: 200,
+		})",
+		persistent: false,
+	},
 
 #-------------------------- constructor/destructor --------------------------#
 	transient_obj_constructor: "[
