--- a/data/objects/effects/attaches/light_source_attache.cfg
+++ b/data/objects/effects/attaches/light_source_attache.cfg
@@ -1,5 +1,6 @@
 {
 id: "light_source_attache",
+serializable: false,
 prototype: ["effects_attache"],
 	zorder: "@include data/zorder.cfg:shadow_overlay",
 
