--- a/data/objects/props/utilities/torch.cfg
+++ b/data/objects/props/utilities/torch.cfg
@@ -10,7 +10,8 @@ properties: {
 			parent: me,
 			sound_file:'ambient/torch.ogg',
 			starts_with_sound_on: true
-		})"
+		})",
+		persistent: false,
 	},
 	
 	_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {
@@ -25,12 +26,14 @@ properties: {
 				expression: def(obj legacy_particle_attache particle_obj_context)->int lib.math.round((wave(particle_obj_context.cycle)+1000)/100 + 10),
 			}],
 		})",
+		persistent: false,
 	},
 	
 	_torch_glow: { type: "obj torch_glow", init: "object('torch_glow', mid_x, mid_y - 20, {
 			parent: me,
 			time_to_die: 200,
 		})",
+		persistent: false,
 	},
 #-------------------------- constructor/destructor --------------------------#
 	transient_obj_constructor: "[
