Flagged our instances of light_source_attache as persistent: false.

--- a/data/level/Unused/Test/test-liquids.cfg
+++ b/data/level/Unused/Test/test-liquids.cfg
@@ -182,29 +182,7 @@
 	"segment_height": 0,
 	"segment_width": 0,
 	"serialized_objects": {
-		"character": [
-			{
-				"_uuid": "a95bbc67521d4e7680f9c32b905c324a",
-				"current_frame": "normal",
-				"custom": true,
-				"draw_scale": 500000,
-				"label": "_3085be7e",
-				"parent": "deserialize('77b9edc74cc14f938a802bb648a8f989')",
-				"property_data": {
-					"_sprite_type": "@eval enum eased_halo",
-					"custom_relative_pos_default": {
-						"mid_x": 0,
-						"mid_y": 0
-					},
-					"time_to_die": 0
-				},
-				"relative_x": 0,
-				"relative_y": 0,
-				"type": "light_source_attache",
-				"x": 1104,
-				"y": 104
-			}
-		]
+		"character": []
 	},
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
