--- a/data/objects/effects/misc/light_controller.cfg
+++ b/data/objects/effects/misc/light_controller.cfg
@@ -23,6 +23,7 @@ properties: {
 			scale: scale_factor,
 			variable_name: 'light_circular',
 		})",
+		persistent: false,
 	},
 
 #-------------------------- vars --------------------------#
