--- a/data/objects/enemies/bugs/hopper_armored.cfg
+++ b/data/objects/enemies/bugs/hopper_armored.cfg
@@ -243,6 +243,7 @@ object_type: [
 					scale: 0.25,
 					variable_name: 'light_circular',
 				})",
+				persistent: false,
 			},
 		},
 		animation: {
