--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3333,7 +3333,8 @@ object_type: [
 					custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 					scale: 0.75,
 					variable_name: 'light_circular',
-			})",
+				})",
+				persistent: false,
 			},
 		},
 		
@@ -3788,6 +3789,7 @@ object_type: [
 					scale: 0.75,
 					variable_name: 'light_circular',
 				})",
+				persistent: false,
 			},
 		},
 		
@@ -3832,6 +3834,7 @@ object_type: [
 					scale: 0.75,
 					variable_name: 'light_circular',
 				})",
+				persistent: false,
 			},
 
 		},
@@ -3887,16 +3890,29 @@ object_type: [
 															me.force_death()
 														)",
 			
-			_contrail_particles: { type: "obj particle_attache", init: "object('particle_attache',mid_x,mid_y, {_particle_type:'fireball_sparks', parent: me, zsub_order: -1, time_to_die: 60})" },
+			_contrail_particles: {
+				type: "obj particle_attache",
+				init: "object('particle_attache', mid_x, mid_y, {
+					_particle_type:'fireball_sparks',
+					parent: me,
+					zsub_order: -1,
+					time_to_die: 60,
+				})",
+				persistent: false,
+			},
 			
-			_glow_effect: { type: "obj effects_attache_glow_source", init: "object('effects_attache_glow_source', mid_x, mid_y, {
-																			time_to_die: 0,
-																			parent: me,
-																			base_alpha: 160,
-																			flicker_type: enum sputter,
-																			graphics: enum firey,
-																			scale_factor: 0.32,
-																		})", },
+			_glow_effect: {
+				type: "obj effects_attache_glow_source",
+				init: "object('effects_attache_glow_source', mid_x, mid_y, {
+					time_to_die: 0,
+					parent: me,
+					base_alpha: 160,
+					flicker_type: enum sputter,
+					graphics: enum firey,
+					scale_factor: 0.32,
+				})",
+				persistent: false,
+			},
 			
 
 			terrain_response_head: "commands :: [
@@ -3933,6 +3949,7 @@ object_type: [
 					scale: 0.75,
 					variable_name: 'light_circular',
 				})",
+				persistent: false,
 			},
 		},
 		
@@ -4113,6 +4130,7 @@ object_type: [
 					scale: 1.0,
 					variable_name: 'light_circular',
 				})",
+				persistent: false,
 			},
 		},
 		
@@ -4216,6 +4234,7 @@ object_type: [
 					scale: 1.0,
 					variable_name: 'light_circular',
 				})",
+				persistent: false,
 			},
 		},
 		
@@ -4345,6 +4364,7 @@ object_type: [
 					scale: 1.0,
 					variable_name: 'light_circular',
 				})",
+				persistent: false,
 			},
 		},
 		
@@ -4704,6 +4724,7 @@ object_type: [
 					scale: 1.0,
 					variable_name: 'light_circular',
 				})",
+				persistent: false,
 			},
 		},
 		
