--- a/data/objects/props-interactive/misc/soda_machine.cfg
+++ b/data/objects/props-interactive/misc/soda_machine.cfg
@@ -47,6 +47,7 @@ object_type: {
 				scale: 0.5,
 				variable_name: 'light_circular',
 			})",
+			persistent: false,
 		},
 #-------------------------- constructor/destructor --------------------------#
 		transient_obj_constructor: "[
