--- a/data/objects/effects/puffs/explosion_big.cfg
+++ b/data/objects/effects/puffs/explosion_big.cfg
@@ -14,6 +14,7 @@ properties: {
 			scale: 0.25,
 			variable_name: 'light_circular',
 		})",
+		persistent: false,
 	},
 
 #-------------------------- constructor/destructor --------------------------#
