--- a/data/objects/effects/puffs/explosion_huge_harmful.cfg
+++ b/data/objects/effects/puffs/explosion_huge_harmful.cfg
@@ -26,6 +26,7 @@ properties: {
 			scale: 0.25,
 			variable_name: 'light_circular',
 		})",
+		persistent: false,
 	},
 #-------------------------- constructor/destructor --------------------------#
 	transient_obj_constructor: "[
