--- a/data/objects/props/utilities/ceiling_lamp.cfg
+++ b/data/objects/props/utilities/ceiling_lamp.cfg
@@ -13,7 +13,6 @@ properties: {
 
 	light_cone: {
 		type: "obj light_source_attache",
-		serializable: false, //Light source attache is not serializable, so we need to re-init it.
 		init: "object('light_source_attache', mid_x, mid_y, {
 			_sprite_type: enum elliptical1,
 			time_to_die: 0,
@@ -21,10 +20,10 @@ properties: {
 			custom_relative_pos_default: {mid_x: 0,	mid_y: 65},
 			variable_name: 'light_cone',
 		})",
+		persistent: false,
 	},
 	light_circular: {
 		type: "obj light_source_attache",
-		serializable: false, //Light source attache is not serializable, so we need to re-init it.
 		init: "object('light_source_attache', mid_x, mid_y, {
 			_sprite_type: enum eased_halo,
 			time_to_die: 0,
@@ -33,11 +32,11 @@ properties: {
 			scale: 0.5,
 			variable_name: 'light_circular',
 		})",
+		persistent: false,
 	},
 	
 	lamp_spark_particles: { 
 		type: "obj particle_attache", 
-		serializable: false, //Particle attache is not serializable, so we need to re-init it.
 		init: "object('particle_attache', x,y, {
 			_particle_type:'lamp_sparks',
 			parent: me,
@@ -45,6 +44,7 @@ properties: {
 			time_to_die: 0,
 			variable_name: 'lamp_spark_particles',
 		})"
+		persistent: false,
 	},
 	
 	transient_obj_constructor: "[
