Converted all the legacy_particle_attache instances over to being persistent:false.

--- a/data/object_prototypes/enemies_specialized/gazerlet.cfg
+++ b/data/object_prototypes/enemies_specialized/gazerlet.cfg
@@ -119,6 +119,8 @@ properties: {
 					))
 			}],
 		})",
+		persistent: false,
+		variable_name: 'aggro_particles',
 	},
 
 	flame_on:	"[my_particles.turn_on, add_object(_glow)]",
