--- a/data/objects/effects/misc/current_generator.cfg
+++ b/data/objects/effects/misc/current_generator.cfg
@@ -13,6 +13,11 @@ editor_info: {
 },
 
 properties: {
+#-------------------------- constructor/destructor --------------------------#
+	transient_obj_constructor: "[
+		fire_event('setup_particles'),
+	]",
+
 #-------------------------- vars --------------------------#
 	_x_bound: { type: "int", editor_info: { type: "x", value: "x-100" } },
 	_x2_bound: { type: "int", editor_info: { type: "x", value: "x+150" } },
@@ -34,12 +39,11 @@ properties: {
 			time_to_die: 200,
 			custom_relative_pos_default: {mid_x: 0, mid_y: 0},
 		})",
+		persistent: false,
+		variable_name: 'air_particles',
 	},
 },
 
-on_create: "[
-	fire_event('setup_particles'),
-]",
 
 on_setup_particles: "[
 	//Set up the particle effects.
