--- a/data/objects/enemies/bosses/gazer_boss.cfg
+++ b/data/objects/enemies/bosses/gazer_boss.cfg
@@ -1287,7 +1287,17 @@ object_type: [
 				
 				)", 
 
-			my_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'gazer_boss_zoomer_trail', parent: me, time_to_die: 20, zorder: me.zorder - 1})", },
+			my_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'gazer_boss_zoomer_trail',
+					parent: me,
+					time_to_die: 20,
+					zorder: me.zorder - 1
+				})",
+				persistent: false,
+				variable_name: 'my_particles',
+			},
 
 			
 			
