--- a/data/objects/enemies/bugs/moth_bomber_bomb.cfg
+++ b/data/objects/enemies/bugs/moth_bomber_bomb.cfg
@@ -18,6 +18,8 @@
 				custom_relative_pos_default: {mid_x: -10, mid_y: -10},
 				variable_name: 'my_particles',
 			})",
+			persistent: false,
+			variable_name: 'my_particles',
 		},
 
 		light_circular: {
