--- a/data/objects/enemies/milgramen/milgram_pod_launcher.cfg
+++ b/data/objects/enemies/milgramen/milgram_pod_launcher.cfg
@@ -30,14 +30,17 @@ properties: {
 
 
 #-------------------------- visual fx --------------------------#
-	_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {
+	_particles: {
+		type: "obj legacy_particle_attache",
+		init: "object('legacy_particle_attache', mid_x, mid_y, {
 			_particle_type: 'steam_small',
 			zorder: me.zorder + 1,
 			parent: me,
 			time_to_die: 200,
 			custom_relative_pos_default: {mid_x: -12, mid_y: -45},
-		
 		})",
+		persistent: false,
+		variable_name: '_particles',
 	},
 
 #-------------------------- shooting behavior --------------------------#
