--- a/data/objects/items/mana_cube.cfg
+++ b/data/objects/items/mana_cube.cfg
@@ -18,7 +18,9 @@ properties: {
 	annul_regular_physics: "animation('free')",
 
 #-------------------------- visual fx --------------------------#
-	_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {
+	_particles: {
+		type: "obj legacy_particle_attache",
+		init: "object('legacy_particle_attache', mid_x, mid_y, {
 			_particle_type: 'mana_cube_sparkles',
 			zorder: me.zorder + 1,
 			parent: me,
@@ -26,6 +28,8 @@ properties: {
 			custom_relative_pos_default: {mid_x: 0, mid_y: 0},
 		
 		})",
+		persistent: false,
+		variable_name: '_particles',
 	},
 	
 #-------------------------- item_droppable overrides --------------------------#
