--- a/data/objects/props-interactive/misc/brazier.cfg
+++ b/data/objects/props-interactive/misc/brazier.cfg
@@ -30,23 +30,44 @@ properties: {
 	set_event_to_false_upon_being_extinguished: { type:"bool", default: false, editor_info: { type: "boolean", value: "false" } },
 
 
-	burn_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'bonfire', parent: me, time_to_die: 20, custom_relative_pos_default: {mid_x: 0, mid_y: -15}})", },
+	burn_particles: {
+		type: "obj legacy_particle_attache",
+		init: "object('legacy_particle_attache', mid_x, mid_y, {
+			_particle_type: 'bonfire',
+			parent: me,
+			time_to_die: 20,
+			custom_relative_pos_default: {mid_x: 0, mid_y: -15}
+		})",
+		persistent: false,
+		variable_name: 'burn_particles',
+	},
 	
-	_fire_sound_loop: { type: "obj sound_source_individual_attache", init: "object('sound_source_individual_attache', mid_x, mid_y, {parent: me, sound_file:'ambient/fireplace.ogg', starts_with_sound_on: false})" },
+	_fire_sound_loop: {
+		type: "obj sound_source_individual_attache",
+		init: "object('sound_source_individual_attache', mid_x, mid_y, {
+			parent: me,
+			sound_file:'ambient/fireplace.ogg',
+			starts_with_sound_on: false,
+		})",
+		persistent: false,
+		variable_name: '_fire_sound_loop',
+	},
 
 	_fire_glow: {
-					type: "obj effects_attache_glow_source",
-					init: "object('effects_attache_glow_source', mid_x, mid_y, {
-									time_to_die: 0,
-									parent: me,
-									custom_relative_pos_default: {mid_x: 0,	mid_y: -15},
-									base_alpha: 160,
-									flicker_type: enum sputter,
-									graphics: enum firey,
-									scale_factor: 1.00,
-									zorder: 5000,
-								})",
-				},
+		type: "obj effects_attache_glow_source",
+		init: "object('effects_attache_glow_source', mid_x, mid_y, {
+			time_to_die: 0,
+			parent: me,
+			custom_relative_pos_default: {mid_x: 0,	mid_y: -15},
+			base_alpha: 160,
+			flicker_type: enum sputter,
+			graphics: enum firey,
+			scale_factor: 1.00,
+			zorder: 5000,
+		})",
+		persistent: false,
+		variable_name: '_fire_glow',
+	},
 
 #-------------------------- special damage type --------------------------#
 	damage_types_allowed_to_toggle_this_to_on: "[enum fire]",
