--- a/data/objects/props-interactive/misc/fountain_of_health.cfg
+++ b/data/objects/props-interactive/misc/fountain_of_health.cfg
@@ -49,14 +49,17 @@ object_type: {
 		material_sound: "enum stone",
 
 	#-------------------------- visual fx --------------------------#
-		_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {
+		_particles: {
+			type: "obj legacy_particle_attache",
+			init: "object('legacy_particle_attache', mid_x, mid_y, {
 				_particle_type: 'fountain_water_droplets',
 				zorder: me.zorder + 1,
 				parent: me,
 				time_to_die: 200,
 				custom_relative_pos_default: {mid_x: 0, mid_y: 40},
-			
 			})",
+			persistent: false,
+			variable_name: '_particles',
 		},
 	},
 
