--- a/data/objects/props-interactive/misc/save_statue.cfg
+++ b/data/objects/props-interactive/misc/save_statue.cfg
@@ -73,29 +73,34 @@ properties: {
 	player_is_near_statue: "def(obj save_statue the_statue, int dist) -> bool lib.math.length(level.player,the_statue) < dist", //somewhat non-obvious; we use the rectangular area (assumed to be really close and tight, and to cover e.g. vertical passageways completely) to handle triggering the save.  However, to handle "making it possible to re-trigger this save point", we use a much wider, much more greedy circular radius.  Essentially all this is for is to prevent spamming the "game has been saved" message over and over if the player stands/walks near a save point.
 	
 #-------------------------- visual fx --------------------------#
-	_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {
+	_particles: {
+		type: "obj legacy_particle_attache",
+		init: "object('legacy_particle_attache', mid_x, mid_y, {
 			_particle_type: 'save_statue_fire',
 			zorder: me.zorder + 1,
 			parent: me,
 			time_to_die: 200,
 			custom_relative_pos_default: {mid_x: 0, mid_y: -10},
-			
 		})",
+		persistent: false,
+		variable_name: '_particles',
 	},
 
 	_fire_glow: {
-					type: "obj effects_attache_glow_source",
-					init: "object('effects_attache_glow_source', mid_x, mid_y, {
-									time_to_die: 0,
-									parent: me,
-									custom_relative_pos_default: {mid_x: 0,	mid_y: 10},
-									base_alpha: 160,
-									flicker_type: enum sputter,
-									graphics: enum firey,
-									scale_factor: 0.25,
-									zorder: 5000,
-								})",
-				},
+		type: "obj effects_attache_glow_source",
+		init: "object('effects_attache_glow_source', mid_x, mid_y, {
+			time_to_die: 0,
+			parent: me,
+			custom_relative_pos_default: {mid_x: 0,	mid_y: 10},
+			base_alpha: 160,
+			flicker_type: enum sputter,
+			graphics: enum firey,
+			scale_factor: 0.25,
+			zorder: 5000,
+		})",
+		persistent: false,
+		variable_name: '_fire_glow',
+	},
 	
 	
 #-------------------------- vars --------------------------#
