--- a/data/objects/props-interactive/npcs/prospera_npc.cfg
+++ b/data/objects/props-interactive/npcs/prospera_npc.cfg
@@ -242,7 +242,16 @@ object_type: [
 			faux_velocity_y: { type:"decimal", default: 0 },
 
 
-			my_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'prospera_spell_contrail', parent: me, time_to_die: 50})", },
+			my_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'prospera_spell_contrail',
+					parent: me,
+					time_to_die: 50,
+				})",
+				persistent: false,
+				variable_name: 'my_particles',
+			},
 		},
 
 		on_process: "[
@@ -334,7 +343,16 @@ object_type: [
 		
 			polar_to_cartesian:  "def(decimal angle, decimal mag) -> {x: decimal, y: decimal} {x:  mag * cos(angle), y: mag * sin(angle) }",
 		
-			my_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'prospera_spell_aftermath', parent: me, time_to_die: 50})", },
+			my_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'prospera_spell_aftermath',
+					parent: me,
+					time_to_die: 50
+				})",
+				persistent: false,
+				variable_name: 'my_particles',
+			},
 		},
 
 		on_create: "[
