--- a/data/objects/props-interactive/obstacles/fan_horizontal.cfg
+++ b/data/objects/props-interactive/obstacles/fan_horizontal.cfg
@@ -10,7 +10,9 @@ properties: {
 #-------------------------- effects attaches --------------------------#
 	sfx: { type: "obj sound_source_individual_attache", init: "object('sound_source_individual_attache', mid_x, mid_y, {parent: me, sound_file:'ambient/fan.ogg', starts_with_sound_on: false})" },
 
-	air_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {
+	air_particles: {
+		type: "obj legacy_particle_attache",
+		init: "object('legacy_particle_attache', mid_x, mid_y, {
 			_particle_type: 'air_current',
 			zorder: me.zorder + 1,
 			parent: me,
@@ -44,6 +46,8 @@ properties: {
 				magnitude: lib.math.round(50 * (300.0/_current_vel_x)),
 			}],
 		})",
+		persistent: false,
+		variable_name: 'air_particles',
 	},
 
 	axis_fudge_factor: "1.6",  //our x and y physics basically have different scales, so to 'feel' similar we need a much stronger current, but we don't want the particles to look crazy in that direction.
