--- a/data/objects/props/utilities/piston_machine.cfg
+++ b/data/objects/props/utilities/piston_machine.cfg
@@ -9,7 +9,9 @@ properties: {
 
 
 	#-------------------------- visual fx --------------------------#
-		_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {
+		_particles: {
+			type: "obj legacy_particle_attache",
+			init: "object('legacy_particle_attache', mid_x, mid_y, {
 				_particle_type: 'steam_small',
 				zorder: me.zorder + 1,
 				parent: me,
@@ -17,6 +19,8 @@ properties: {
 				custom_relative_pos_default: {mid_x: 55, mid_y: -30},
 			
 			})",
+			persistent: false,
+			variable_name: '_particles',
 		},
 
 },
