--- a/data/objects/props/utilities/torch.cfg
+++ b/data/objects/props/utilities/torch.cfg
@@ -6,15 +6,20 @@ timer_frequency: 3,
 prototype: ['transient_object'],
 properties: {
 	
-	_sfx: { type: "obj sound_source_individual_attache", init: "object('sound_source_individual_attache', mid_x, mid_y, {
+	_sfx: {
+		type: "obj sound_source_individual_attache",
+		init: "object('sound_source_individual_attache', mid_x, mid_y, {
 			parent: me,
 			sound_file:'ambient/torch.ogg',
 			starts_with_sound_on: true
 		})",
 		persistent: false,
+		variable_name: '_sfx',
 	},
 	
-	_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {
+	_particles: {
+		type: "obj legacy_particle_attache",
+		init: "object('legacy_particle_attache', mid_x, mid_y, {
 			_particle_type: 'torch_flames',
 			zorder: me.zorder + 1,
 			parent: me,
@@ -27,13 +32,17 @@ properties: {
 			}],
 		})",
 		persistent: false,
+		variable_name: '_particles',
 	},
 	
-	_torch_glow: { type: "obj torch_glow", init: "object('torch_glow', mid_x, mid_y - 20, {
+	_torch_glow: {
+		type: "obj torch_glow",
+		init: "object('torch_glow', mid_x, mid_y - 20, {
 			parent: me,
 			time_to_die: 200,
 		})",
 		persistent: false,
+		variable_name: '_torch_glow',
 	},
 #-------------------------- constructor/destructor --------------------------#
 	transient_obj_constructor: "[
