--- a/data/objects/enemies/bugs/moth_small.cfg
+++ b/data/objects/enemies/bugs/moth_small.cfg
@@ -118,7 +118,15 @@ object_type: [
 		]",
 		
 		properties: {
-			my_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'moth_small_burst', parent: me, time_to_die: 150})", },
+			my_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'moth_small_burst',
+					parent: me,
+					time_to_die: 150
+				})",
+				persistent: false,
+			},
 		},
 
 		animation: [{
@@ -166,7 +174,16 @@ object_type: [
 					spawn('moth_small.flash', mid_x, mid_y, facing),
 				]",
 
-			my_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'moth_small_trail', parent: me, time_to_die: 50})", },
+			my_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'moth_small_trail',
+					parent: me,
+					time_to_die: 50
+				})",
+				persistent: false,
+				variable_name: 'my_particles',
+			},
 
 		},
 		on_create: "add_object(my_particles)",
