--- a/data/objects/items/ability_talisman.cfg
+++ b/data/objects/items/ability_talisman.cfg
@@ -28,14 +28,17 @@ properties: {
 	do_starburst: "[spawn('silhouette_star.burst',mid_x,mid_y,1),map([0,0,0,0],spawn('coin_sparkle',midpoint_x + 1d40-20,midpoint_y + 1d40-20,0))]",
 
 #-------------------------- visual fx --------------------------#
-	_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {
+	_particles: {
+		type: "obj legacy_particle_attache",
+		init: "object('legacy_particle_attache', mid_x, mid_y, {
 			_particle_type: 'treasure_sparkle',
 			zorder: me.zorder + 1,
 			parent: me,
 			time_to_die: 200,
 			custom_relative_pos_default: {mid_x: 0, mid_y: 0},
-		
 		})",
+		persistent: false,
+		variable_name: '_particles',
 	},
 
 #-------------------------- item_acquirable overloads --------------------------#
