--- a/data/objects/items/coin_gold.cfg
+++ b/data/objects/items/coin_gold.cfg
@@ -11,7 +11,9 @@ properties: {
 	removal_time: "40",
 
 #-------------------------- visual fx --------------------------#
-	_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {
+	_particles: {
+		type: "obj legacy_particle_attache",
+		init: "object('legacy_particle_attache', mid_x, mid_y, {
 			_particle_type: 'treasure_sparkle',
 			zorder: me.zorder + 1,
 			parent: me,
@@ -23,6 +25,8 @@ properties: {
 				magnitude: 20,
 			}],
 		})",
+		persistent: false,
+		variable_name: '_particles',
 	},
 },
 
