--- a/data/objects/items/coin_gold_enormous.cfg
+++ b/data/objects/items/coin_gold_enormous.cfg
@@ -10,7 +10,9 @@ properties: {
 	acquisition_music_filename: "'specialitem.ogg'",
 
 #-------------------------- visual fx --------------------------#
-	_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {
+	_particles: {
+		type: "obj legacy_particle_attache",
+		init: "object('legacy_particle_attache', mid_x, mid_y, {
 			_particle_type: 'treasure_sparkle',
 			zorder: me.zorder + 1,
 			parent: me,
@@ -27,6 +29,8 @@ properties: {
 				magnitude: 160,
 			}],
 		})",
+		persistent: false,
+		variable_name: '_particles',
 	},
 },
 
