--- a/data/objects/items/coin_silver.cfg
+++ b/data/objects/items/coin_silver.cfg
@@ -11,7 +11,9 @@ properties: {
 	removal_time: "30",
 
 #-------------------------- visual fx --------------------------#
-	_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {
+	_particles: {
+		type: "obj legacy_particle_attache",
+		init: "object('legacy_particle_attache', mid_x, mid_y, {
 			_particle_type: 'treasure_sparkle',
 			zorder: me.zorder + 1,
 			parent: me,
@@ -19,6 +21,8 @@ properties: {
 			custom_relative_pos_default: {mid_x: 0, mid_y: 0},
 		
 		})",
+		persistent: false,
+		variable_name: '_particles',
 	},
 
 },
