--- a/data/objects/items/trophy.cfg
+++ b/data/objects/items/trophy.cfg
@@ -35,7 +35,9 @@ properties: {
 	",
 
 #-------------------------- visual fx --------------------------#
-	_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {
+	_particles: {
+		type: "obj legacy_particle_attache",
+		init: "object('legacy_particle_attache', mid_x, mid_y, {
 			_particle_type: 'treasure_sparkle',
 			zorder: me.zorder + 1,
 			parent: me,
@@ -43,6 +45,8 @@ properties: {
 			custom_relative_pos_default: {mid_x: 0, mid_y: 0},
 		
 		})",
+		persistent: false,
+		variable_name: '_particles',
 	},
 	
 
