--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3090,7 +3090,17 @@ object_type: [
 			_parent_obj: { type: "obj frogatto_playable" },
 
 
-			bubble_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'underwater_bubbles', parent: me, time_to_die: 200, custom_relative_pos_default: {mid_x: 0, mid_y: 0}})", },
+			bubble_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'underwater_bubbles',
+					parent: me,
+					time_to_die: 200,
+					custom_relative_pos_default: {mid_x: 0, mid_y: 0}
+				})",
+				persistent: false,
+				variable_name: 'bubble_particles',
+			},
 
 			death_effects: "def(string type) -> commands [
 				spawn('frogatto_playable.bubble_shot_pop', mid_x, mid_y, 1),
@@ -3267,7 +3277,17 @@ object_type: [
 			_parent_obj: { type: "obj frogatto_playable" },
 
 
-			burn_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'fire_bubbles', parent: me, time_to_die: 20, custom_relative_pos_default: {mid_x: 0, mid_y: -2}})", },
+			burn_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'fire_bubbles',
+					parent: me,
+					time_to_die: 20,
+					custom_relative_pos_default: {mid_x: 0, mid_y: -2}
+				})",
+				persistent: false,
+				variable_name: 'burn_particles',
+			},
 
 			death_effects: "def(string type) -> commands [
 				spawn('frogatto_playable.bubble_shot_pop', mid_x, mid_y, 1),
