--- a/data/objects/props/furniture-dungeon/fireplace_milgram.cfg
+++ b/data/objects/props/furniture-dungeon/fireplace_milgram.cfg
@@ -39,9 +39,20 @@ properties: {
 	_is_burning__internal: "if(event = '', is_burning, bool(event_status))",
 
 	
-	sfx: { type: "obj sound_source_individual_attache", init: "object('sound_source_individual_attache', mid_x, mid_y, {parent: me, sound_file:'ambient/fireplace.ogg', starts_with_sound_on: false})" },
+	sfx: {
+		type: "obj sound_source_individual_attache",
+		init: "object('sound_source_individual_attache', mid_x, mid_y, {
+			parent: me,
+			sound_file:'ambient/fireplace.ogg',
+			starts_with_sound_on: false
+		})"
+		persistent: false,
+		variable_name: 'sfx',
+	},
 
-	fire_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {
+	fire_particles: {
+		type: "obj legacy_particle_attache",
+		init: "object('legacy_particle_attache', mid_x, mid_y, {
 			_particle_type: 'bonfire',
 			zorder: me.zorder + 1,
 			parent: me,
@@ -69,20 +80,24 @@ properties: {
 				magnitude: 200,
 			}],
 		})",
+		persistent: false,
+		variable_name: 'fire_particles',
 	},
 
 	lighting: {
 		type: "obj effects_attache_glow_source",
 		init: "object('effects_attache_glow_source', mid_x, mid_y, {
-				time_to_die: 0,
-				parent: me,
-				custom_relative_pos_default: {mid_x: 0,	mid_y: 4},
-				base_alpha: 160,
-				flicker_type: enum sputter,
-				graphics: enum firey,
-				scale_factor: 1.40,
-				zorder: me.zorder,
-			})",
+			time_to_die: 0,
+			parent: me,
+			custom_relative_pos_default: {mid_x: 0,	mid_y: 4},
+			base_alpha: 160,
+			flicker_type: enum sputter,
+			graphics: enum firey,
+			scale_factor: 1.40,
+			zorder: me.zorder,
+		})",
+		persistent: false,
+		variable_name: 'lighting',
 	},
 #-------------------------- constructor/destructor --------------------------#
 	triggerable_obj_constructor: "commands :: [
