Converted all the damage_beam_attaches to be persistent: false.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -4242,7 +4242,18 @@ object_type: [
 
 
 			incept_angle: { type: "int", dynamic_initialization: true },
-			_damage_beam: { type: "obj damage_beam_attache", init: "object('damage_beam_attache', mid_x, mid_y, {parent: me, relative_x: 0, relative_y: 0, beam_distance: 30, attack_diameter: 10 })" },
+			_damage_beam: {
+				type: "obj damage_beam_attache",
+				init: "object('damage_beam_attache', mid_x, mid_y, {
+					parent: me,
+					relative_x: 0,
+					relative_y: 0,
+					beam_distance: 30,
+					attack_diameter: 10,
+				})",
+				persistent: false,
+				variable_name: '_damage_beam',
+			},
 
 			light_circular: {
 				type: "obj light_source_attache",
@@ -4731,7 +4742,18 @@ object_type: [
 					lib.sound.play_sound(me, 'homingimpact'), 
 				]",
 				
-			_damage_beam: { type: "obj damage_beam_attache", init: "object('damage_beam_attache', mid_x, mid_y, {parent: me, relative_x: 0, relative_y: 0, beam_distance: 30, attack_diameter: 10 })" },
+			_damage_beam: {
+				type: "obj damage_beam_attache",
+				init: "object('damage_beam_attache', mid_x, mid_y, {
+					parent: me,
+					relative_x: 0,
+					relative_y: 0,
+					beam_distance: 30,
+					attack_diameter: 10
+				})",
+				persistent: false,
+				variable_name: '_damage_beam',
+			},
 
 
 			light_circular: {
