Fixed a really dumb thing where I put a bunch of the variable_name tags at the wrong place in the hierarchy.

--- a/data/objects/enemies/bosses/gazer_boss.cfg
+++ b/data/objects/enemies/bosses/gazer_boss.cfg
@@ -1293,10 +1293,10 @@ object_type: [
 					_particle_type: 'gazer_boss_zoomer_trail',
 					parent: me,
 					time_to_die: 20,
-					zorder: me.zorder - 1
+					zorder: me.zorder - 1,
+					variable_name: 'my_particles',
 				})",
 				persistent: false,
-				variable_name: 'my_particles',
 			},
 
 			
