--- a/data/objects/enemies/bugs/moth_small.cfg
+++ b/data/objects/enemies/bugs/moth_small.cfg
@@ -179,10 +179,10 @@ object_type: [
 				init: "object('legacy_particle_attache', mid_x, mid_y, {
 					_particle_type: 'moth_small_trail',
 					parent: me,
-					time_to_die: 50
+					time_to_die: 50,
+					variable_name: 'my_particles',
 				})",
 				persistent: false,
-				variable_name: 'my_particles',
 			},
 
 		},
