--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3096,10 +3096,10 @@ object_type: [
 					_particle_type: 'underwater_bubbles',
 					parent: me,
 					time_to_die: 200,
-					custom_relative_pos_default: {mid_x: 0, mid_y: 0}
+					custom_relative_pos_default: {mid_x: 0, mid_y: 0},
+					variable_name: 'bubble_particles',
 				})",
 				persistent: false,
-				variable_name: 'bubble_particles',
 			},
 
 			death_effects: "def(string type) -> commands [
@@ -3283,10 +3283,10 @@ object_type: [
 					_particle_type: 'fire_bubbles',
 					parent: me,
 					time_to_die: 20,
-					custom_relative_pos_default: {mid_x: 0, mid_y: -2}
+					custom_relative_pos_default: {mid_x: 0, mid_y: -2},
+					variable_name: 'burn_particles',
 				})",
 				persistent: false,
-				variable_name: 'burn_particles',
 			},
 
 			death_effects: "def(string type) -> commands [
@@ -4250,9 +4250,9 @@ object_type: [
 					relative_y: 0,
 					beam_distance: 30,
 					attack_diameter: 10,
+					variable_name: '_damage_beam',
 				})",
 				persistent: false,
-				variable_name: '_damage_beam',
 			},
 
 			light_circular: {
@@ -4749,10 +4749,10 @@ object_type: [
 					relative_x: 0,
 					relative_y: 0,
 					beam_distance: 30,
-					attack_diameter: 10
+					attack_diameter: 10,
+					variable_name: '_damage_beam',
 				})",
 				persistent: false,
-				variable_name: '_damage_beam',
 			},
 
 
