--- a/data/objects/props-interactive/misc/brazier.cfg
+++ b/data/objects/props-interactive/misc/brazier.cfg
@@ -36,10 +36,10 @@ properties: {
 			_particle_type: 'bonfire',
 			parent: me,
 			time_to_die: 20,
-			custom_relative_pos_default: {mid_x: 0, mid_y: -15}
+			custom_relative_pos_default: {mid_x: 0, mid_y: -15},
+			variable_name: 'burn_particles',
 		})",
 		persistent: false,
-		variable_name: 'burn_particles',
 	},
 	
 	_fire_sound_loop: {
@@ -48,9 +48,9 @@ properties: {
 			parent: me,
 			sound_file:'ambient/fireplace.ogg',
 			starts_with_sound_on: false,
+			variable_name: '_fire_sound_loop',
 		})",
 		persistent: false,
-		variable_name: '_fire_sound_loop',
 	},
 
 	_fire_glow: {
@@ -64,9 +64,9 @@ properties: {
 			graphics: enum firey,
 			scale_factor: 1.00,
 			zorder: 5000,
+			variable_name: '_fire_glow',
 		})",
 		persistent: false,
-		variable_name: '_fire_glow',
 	},
 
 #-------------------------- special damage type --------------------------#
