--- a/data/objects/props/furniture-dungeon/fireplace_milgram.cfg
+++ b/data/objects/props/furniture-dungeon/fireplace_milgram.cfg
@@ -44,10 +44,10 @@ properties: {
 		init: "object('sound_source_individual_attache', mid_x, mid_y, {
 			parent: me,
 			sound_file:'ambient/fireplace.ogg',
-			starts_with_sound_on: false
+			starts_with_sound_on: false,
+			variable_name: 'sfx',
 		})"
 		persistent: false,
-		variable_name: 'sfx',
 	},
 
 	fire_particles: {
@@ -79,9 +79,9 @@ properties: {
 				particle_id: '1_fire_sparks',
 				magnitude: 200,
 			}],
+			variable_name: 'fire_particles',
 		})",
 		persistent: false,
-		variable_name: 'fire_particles',
 	},
 
 	lighting: {
@@ -95,9 +95,9 @@ properties: {
 			graphics: enum firey,
 			scale_factor: 1.40,
 			zorder: me.zorder,
+			variable_name: 'lighting',
 		})",
 		persistent: false,
-		variable_name: 'lighting',
 	},
 #-------------------------- constructor/destructor --------------------------#
 	triggerable_obj_constructor: "commands :: [
