--- a/data/objects/props/utilities/torch.cfg
+++ b/data/objects/props/utilities/torch.cfg
@@ -11,10 +11,10 @@ properties: {
 		init: "object('sound_source_individual_attache', mid_x, mid_y, {
 			parent: me,
 			sound_file:'ambient/torch.ogg',
-			starts_with_sound_on: true
+			starts_with_sound_on: true,
+			variable_name: '_sfx',
 		})",
 		persistent: false,
-		variable_name: '_sfx',
 	},
 	
 	_particles: {
@@ -30,9 +30,9 @@ properties: {
 				particle_id: 'torch_flames',
 				expression: def(obj legacy_particle_attache particle_obj_context)->int lib.math.round((wave(particle_obj_context.cycle)+1000)/100 + 10),
 			}],
+			variable_name: '_particles',
 		})",
 		persistent: false,
-		variable_name: '_particles',
 	},
 	
 	_torch_glow: {
@@ -40,9 +40,9 @@ properties: {
 		init: "object('torch_glow', mid_x, mid_y - 20, {
 			parent: me,
 			time_to_die: 200,
+			variable_name: '_torch_glow',
 		})",
 		persistent: false,
-		variable_name: '_torch_glow',
 	},
 #-------------------------- constructor/destructor --------------------------#
 	transient_obj_constructor: "[
