Committing a work-in-progress fix for the moth bomber fuse-fix (we can't use the old fix).

--- a/data/object_prototypes/base/effects_attache.cfg
+++ b/data/object_prototypes/base/effects_attache.cfg
@@ -48,9 +48,10 @@ properties: {
 	variable_name: { type: "string|null" },
 	
 	possibly_restore_parent_reference: "commands :: [
-		if(me.variable_name,
+		if(me.variable_name,[
+			debug('restoring ${variable_name}  ${addr(me)} onto ${addr(_parent_obj)}'),
 			set(_parent_obj[variable_name], me)
-		)
+		])
 	]",
 
 
