--- a/data/objects/enemies/bugs/moth_bomber_bomb.cfg
+++ b/data/objects/enemies/bugs/moth_bomber_bomb.cfg
@@ -35,6 +35,7 @@
 		},
 
 		throwable_object_contructor: "[
+			debug('constructing bomb ${addr(me)}, fuse is ${addr(my_particles)}'),
 			set(fall_through_platforms, 10000),
 			sound('fuse-long.ogg'),
 			add_object(my_particles),
