--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -2903,9 +2903,13 @@ object_type: [
 					• But when a thrown copy is made of them - it's the same type of object, and that type of object happened to be a kind that spawned decorative attaches.   So now we have two copies of them.  Oops.
 
 					As long as we're doing all the cosmetic-attache spawning in the constructor, the following should quell that problem.  This is marked as 'tentative' because like anything sufficiently complicated, we can't see the full cascade of side effects, and it might lead to some new bugs of its own.
-				*/
+
+
+					UPDATE:  we've discovered that this breaks `padlock_key`s, and we're hoping that our system of attache-reassignment-to-variable-names will make it so the new, 'would be duplicate' attaches never get added to the level.  If we re-assign that variable from pointing at a new object, to pointing at the old one, before the `add_object()` call, we'll be safe.
+
 				set(throwable_obj._constructed, true)
 				;
+				*/
 				
 				set(attached_objects, [throwable_obj]), set(_cycle_grabbed, level.cycle),
 				bind_command(def() throwable_obj.set_to_animation('normal')),
