--- a/data/object_prototypes/base/transient_object.cfg
+++ b/data/object_prototypes/base/transient_object.cfg
@@ -20,13 +20,17 @@ properties: {
 
 	_all_attaches: "[obj hittable_attache|obj effects_attache] :: _effects_attaches",
 
+	restore_attache_references: "commands :: [
+		if(me.type = 'moth_bomber_bomb',
+			debug('restoring attaches for ${addr(me)}')
+		),
+		map(me._effects_attaches,
+			value.possibly_restore_parent_reference
+		)
+	]",
 
 	readd_attaches: "def(obj transient_object new_obj) -> commands
 		[
-			map(new_obj._effects_attaches,
-				value.possibly_restore_parent_reference
-			)
-			;
 			map(new_obj._all_attaches, 
 				[
 					add_object(value),
@@ -43,6 +47,7 @@ properties: {
 
 #-------------------------- constructors --------------------------#
 	constructor: "commands :: execute(me,[
+					restore_attache_references ;
 					particle_effects_load_fix ;
 					transient_obj_constructor ;
 					hittable_obj_constructor ;
