Got rid of all the debugging cruft.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -2912,7 +2912,8 @@ object_type: [
 				*/
 				remap_attaches_from_old_to_new( collide_obj, throwable_obj),
 				
-				set(attached_objects, [throwable_obj]), set(_cycle_grabbed, level.cycle),
+				set(attached_objects, [throwable_obj]), set(_cycle_grabbed, level.cycle),  // <-- The constructor for throwable_obj is triggered here, because this is considered as adding it to the game.
+				
 				bind_command(def() throwable_obj.set_to_animation('normal')),
 				fire_event(throwable_obj, 'been_grabbed'),
 				fire_event(throwable_obj, 'swallowed'),
