Added a new behavior for mushroom exploder - if he's near a 'shallow' hole, he will fall instead of turning around

--- a/data/objects/enemies/mushrooms/mushroom_exploder.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_exploder.cfg
@@ -30,8 +30,9 @@ properties: {
 	
 #------------------------ behavior ------------------------#	
 
-	explosion_timer: { type: "int", default: 400 },
+	explosion_timer: { type: "int", default: 30 },
 	is_on_fire: { type: "bool", default: false },
+	wont_turn_around_distance: { type: "int", default: 300 },
 
 	explode: "def() -> commands [
 		set(explosion_timer, explosion_timer - 1),
@@ -47,6 +48,11 @@ properties: {
 	handle_special_damage_response: "def(DamageType damage_type, int final_damage_amount, bool will_die) -> commands [
 		if(damage_type = enum fire, set(is_on_fire, true))
 	]",
+		
+	should_turn_away_from_cliff: "(turns_at_cliffs and 
+		(not is_there_flat_ground_ahead_of_us(distance_to_cliff_check)) and
+		(not standable(level, front + facing*96, y + wont_turn_around_distance)))",
+
 
 
 
