New behavior should work for platforms and think terrain now

--- a/data/objects/enemies/mushrooms/mushroom_exploder.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_exploder.cfg
@@ -30,7 +30,7 @@ properties: {
 	
 #------------------------ behavior ------------------------#	
 
-	explosion_timer: { type: "int", default: 400 },
+	explosion_timer: { type: "int", default: 30 },
 	is_on_fire: { type: "bool", default: false },
 	wont_turn_around_distance: { type: "int", default: 300 },
 
@@ -51,7 +51,7 @@ properties: {
 		
 	should_turn_away_from_cliff: "(turns_at_cliffs and 
 		(not is_there_flat_ground_ahead_of_us(distance_to_cliff_check)) and
-		(not standable(level, front + facing*96, y + wont_turn_around_distance)))",
+		(not standable(level, front + facing*96, y, 1, wont_turn_around_distance)))",
 
 
 
